--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -44,16 +44,16 @@
 
 <div id="headerback"></div>
 <div id="header">
-    <div class="maxw">
+    <div class="maxw" style="background-color: #7a7a7a">
         <div id="logo">
-            54
+            <img src="img/site/logo.png" alt="Логотип">
         </div>
         <div id="burgermenu">
-            df
+            df fdhg hgt rtdg g rt rty rty tyrt ytry rty tr ytr yrt yrty rt yrt yrty try rty rt yrt yrt yt rt yrt yrt yrt ytr yrt yrty dkjkiu kiulkiulkiuiu iulo iuoliu olui oiu iu oiu iu iuo i
         </div>
 
 
-
+        <div class="cl"></div>
     </div>
 </div>
 
