--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -47,9 +47,9 @@
 <div id="header">
     <div class="maxw rel">
         <div id="logo">
-            <img src="img/site/logo.png" alt="Логотип">
+            <!--<img src="img/site/logo.png" alt="Логотип">-->
         </div>
-        <div id="burgermenu">
+        <div id="burgermenu" class="rel">
             <div id="burger" class="burger">
                 <div class="burger_line"></div>
                 <div class="burger_line"></div>
@@ -58,7 +58,7 @@
 
 
             Старт тут !
-            df fdhg hgt rtdg g rt rty rty tyrt ytry rty tr ytr yrt yrty rt yrt yrty try rty rt yrt yrt yt rt yrt yrt yrt ytr yrt yrty dkjkiu kiulkiulkiuiu iulo iuoliu olui oiu iu oiu iu iuo i
+
         </div>
 
 
