--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" type="text/css" href="/css.css">
 
 
+    <script src="/burger.js"></script>
+
+
 </head>
 <body>
 
@@ -52,7 +55,7 @@
         <div id="burgermenu" class="rel">
             <div id="burger" class="burger">
                 <div class="burger_line"></div>
-                <div class="burger_line"></div>
+                <div id="burger_ln_c" class="burger_line"></div>
                 <div class="burger_line"></div>
             </div>
 
