--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -50,18 +50,29 @@
 <div id="header">
     <div class="maxw rel">
         <div id="logo">
-            <!--<img src="img/site/logo.png" alt="Логотип">-->
+            <img src="img/site/logo.png" alt="Логотип">
         </div>
         <div id="burgermenu" class="rel">
             <div id="burger" class="burger">
-                <div class="burger_line"></div>
+                <div id="burger_ln_1" class="burger_line"></div>
                 <div id="burger_ln_c" class="burger_line"></div>
-                <div class="burger_line"></div>
+                <div id="burger_ln_3" class="burger_line"></div>
+            </div>
+            <div id="burger_pc">
+
+                <ul>
+                    <li><a href="/">Бургеры</a></li>
+                    <li><a href="/">Пиццы</a></li>
+                    <li><a href="/">Нагитсы</a></li>
+                    <li><a href="/">Напитки</a></li>
+                </ul>
+
+
+
             </div>
 
 
-            Старт тут !
-
+            <div class="cl"></div>
         </div>
 
 
