--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -14,6 +14,7 @@
 
 
     <script src="/burger.js"></script>
+    <script src="/scroll.js"></script>
 
 
 </head>
@@ -59,18 +60,21 @@
                 <div id="burger_ln_3" class="burger_line"></div>
             </div>
             <div id="burger_pc">
-
                 <ul>
                     <li><a href="/">Бургеры</a></li>
                     <li><a href="/">Пиццы</a></li>
                     <li><a href="/">Нагитсы</a></li>
                     <li><a href="/">Напитки</a></li>
                 </ul>
-
-
-
             </div>
-
+            <div id="burger_mob">
+                <ul>
+                    <li><a href="/">Бургеры</a></li>
+                    <li><a href="/">Пиццы</a></li>
+                    <li><a href="/">Нагитсы</a></li>
+                    <li><a href="/">Напитки</a></li>
+                </ul>
+            </div>
 
             <div class="cl"></div>
         </div>
@@ -80,13 +84,17 @@
     </div>
 </div>
 
+<br>rfgr<br>rged<br>regrg
+<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg
 
 
 
 
 
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+<br>rfgr<br>rged<br>regrg<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </body>
