--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -54,11 +54,24 @@
             <img src="img/site/logo.png" alt="Логотип">
         </div>
         <div id="burgermenu" class="rel">
-            <div id="burger" class="burger">
-                <div id="burger_ln_1" class="burger_line"></div>
-                <div id="burger_ln_c" class="burger_line"></div>
-                <div id="burger_ln_3" class="burger_line"></div>
+            <div id="burger_mob">
+                <div id="burger" class="burger">
+                    <div id="burger_ln_1" class="burger_line"></div>
+                    <div id="burger_ln_c" class="burger_line"></div>
+                    <div id="burger_ln_3" class="burger_line"></div>
+                </div>
+
+                <div>
+                    <ul>
+                        <li><a href="/">Бургеры</a></li>
+                        <li><a href="/">Пиццы</a></li>
+                        <li><a href="/">Нагитсы</a></li>
+                        <li><a href="/">Напитки</a></li>
+                    </ul>
+                </div>
+
             </div>
+
             <div id="burger_pc">
                 <ul>
                     <li><a href="/">Бургеры</a></li>
@@ -67,14 +80,7 @@
                     <li><a href="/">Напитки</a></li>
                 </ul>
             </div>
-            <div id="burger_mob">
-                <ul>
-                    <li><a href="/">Бургеры</a></li>
-                    <li><a href="/">Пиццы</a></li>
-                    <li><a href="/">Нагитсы</a></li>
-                    <li><a href="/">Напитки</a></li>
-                </ul>
-            </div>
+
 
             <div class="cl"></div>
         </div>
