--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -61,7 +61,7 @@
                     <div id="burger_ln_3" class="burger_line"></div>
                 </div>
 
-                <div>
+                <div id="burger_mob_1" class="burger_mob">
                     <ul>
                         <li><a href="/">Бургеры</a></li>
                         <li><a href="/">Пиццы</a></li>
