Smoke Start 0.6.8 landing 1.0 win lng 0.1

--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/lng.css">
     <link rel="stylesheet" type="text/css" href="/common.css">
     <link rel="stylesheet" type="text/css" href="/burger_r.css">
+    <link rel="stylesheet" type="text/css" href="/tile.css">
     <link rel="stylesheet" type="text/css" href="/css.css">
 
 
@@ -89,19 +90,60 @@
         <div class="cl"></div>
     </div>
 </div>
+<div class="cl"></div>
 
+
+<div id="tile" class="dwfe">
+    <div class="unit">
+        <div class="unit_hit"></div>
+        <div class="unit_img">
+            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+        </div>
+        <div class="unit_capt">
+            Супер бургероид
+        </div>
+    </div>
+    <div class="unit">
+        <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+        </div>
+        <div class="unit_ves">250 гр.</div>
+
+        <div class="unit_capt">
+            Супер бургероид 2
+        </div>
+
+
+
+    </div>
+
+</div>
+
+
+1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>
 <br>rfgr<br>rged<br>regrg
 <br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg<br>rfgr<br>rged<br>regrg
 
 
 
+<br>rfgr<br>rged<br>regrg<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div id="af"></div>
+<footer>
+
+    <div id="foot">
+
+        <div id="copy" class="ac gt">Copyright &copy; <?=$Opt::$site;?>
+            <br>2015<?php if (date('Y') > 2015) echo '-' . date('Y'); ?><br><br>Использование материалов сайта без разрешения правообладателя запрещено
+        </div>
+        <div class="cl"></div>
+    </div>
 
 
-
-
-
-<br>rfgr<br>rged<br>regrg<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+    <div id="bf">
+        <div id="up"> ^ Наверх</div>
+    </div>
+</footer>
 </body>
 </html>
