--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -25,12 +25,12 @@
 <div id="bh">
     <div class="maxw">
         <div id="bhlocation"><span class="location">  Мариуполь</span></div>
-        <div id="bhtimew">Работаем с 10:00 до 22:00</div>
+        <div id="bhtimew">Работаем с 08:00 до 19:00</div>
         <div id="bhmenu">
             <a href="/">Доставка</a><a href="/">Контакты</a>
         </div>
         <div id="bhtel">
-            <a href="tel:+380975237787"> +38(096)123-45-67</a>
+            <a href="tel:+380963035583"> +38(096)303-55-83</a>
         </div>
         <div class="lng_btn">
             <!--<span id="lng_en_btn" class="lng_en" title="english" data-lng="en" onClick="lngBtn(this);"></span>-->
@@ -93,9 +93,9 @@
 <div class="cl"></div>
 
 
-<div id="tile" class="dwfe">
+<div id="tile" class="dwfe maxw">
     <div class="unit">
-        <div class="unit_hit"></div>
+        <!--<div class="unit_hit"></div>-->
         <div class="unit_img">
             <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
         </div>
@@ -104,6 +104,7 @@
         </div>
     </div>
     <div class="unit">
+        <div class="unit_hit"></div>
         <div class="unit_img">
 
         <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
@@ -118,7 +119,127 @@
 
 
     </div>
+    <div class="unit">
+        <div class="unit_hit"></div>
+        <div class="unit_img">
 
+            <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+        </div>
+        <div class="unit_ves">250 гр.</div>
+
+        <div class="unit_capt">
+            Супер бургероид 2
+        </div>
+
+
+
+    </div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>    <div class="unit">
+    <div class="unit_hit"></div>
+    <div class="unit_img">
+
+        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+    </div>
+    <div class="unit_ves">250 гр.</div>
+
+    <div class="unit_capt">
+        Супер бургероид 2
+    </div>
+
+
+
+</div>
 </div>
 
 
