--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -64,8 +64,8 @@
 
                 <div id="burger_mob_1" class="burger_mob">
                     <ul>
-                        <li><a href="/">Бургеры</a></li>
-                        <li><a href="/">Пиццы</a></li>
+                        <li><a href="#burger_part">Бургеры</a></li>
+                        <li><a href="#pizza_part">Пиццы</a></li>
                         <li><a href="/">Нагитсы</a></li>
                         <li><a href="/">Напитки</a></li>
                     </ul>
@@ -75,8 +75,8 @@
 
             <div id="burger_pc">
                 <ul>
-                    <li><a href="/">Бургеры</a></li>
-                    <li><a href="/">Пиццы</a></li>
+                    <li><a href="/#burger_part">Бургеры</a></li>
+                    <li><a href="/#pizza_part">Пиццы</a></li>
                     <li><a href="/">Нагитсы</a></li>
                     <li><a href="/">Напитки</a></li>
                 </ul>
@@ -92,22 +92,28 @@
 </div>
 <div class="cl"></div>
 
-
+<div id="burger_part"><h2>БУРГЕРЫ</h2></div>
 <div id="tile" class="dwfe maxw">
     <div class="unit">
         <!--<div class="unit_hit"></div>-->
         <div class="unit_img">
             <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
         </div>
+
+        <div class="unit_ves">250 гр.</div>
+
         <div class="unit_capt">
             Супер бургероид
         </div>
+        <div class="unit_hint">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
     </div>
     <div class="unit">
         <div class="unit_hit"></div>
         <div class="unit_img">
 
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+        <img src="img/tile/chiken_burger.jpg">
 
         </div>
         <div class="unit_ves">250 гр.</div>
@@ -115,56 +121,13 @@
         <div class="unit_capt">
             Супер бургероид 2
         </div>
-
-
-
-    </div>
-    <div class="unit">
-        <div class="unit_hit"></div>
-        <div class="unit_img">
-
-            <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-        </div>
-        <div class="unit_ves">250 гр.</div>
-
-        <div class="unit_capt">
-            Супер бургероид 2
+        <div class="unit_hint">
+            рецепт бургера
         </div>
 
 
-
-    </div>    <div class="unit">
-    <div class="unit_hit"></div>
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
     </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>    <div class="unit">
-    <div class="unit_hit"></div>
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-    </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>    <div class="unit">
+       <div class="unit">
 
     <div class="unit_img">
 
@@ -176,72 +139,21 @@
     <div class="unit_capt">
         Супер бургероид 2
     </div>
+           <div class="unit_hint cl">
+               рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера,
+               рецепт бургера, рецепт бургера, рецепт бургера
+           </div>
+           <div class="unit_price">
+               456 ₴
+           </div>
 
-
-
-</div>    <div class="unit">
-    <div class="unit_hit"></div>
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-    </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>    <div class="unit">
-
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-    </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>    <div class="unit">
-    <div class="unit_hit"></div>
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-    </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>    <div class="unit">
-    <div class="unit_hit"></div>
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
-
-    </div>
-    <div class="unit_ves">250 гр.</div>
-
-    <div class="unit_capt">
-        Супер бургероид 2
-    </div>
-
-
-
-</div>
+<div class="cl"></div>
 </div>
 
+</div>
+
+
+<div id="pizza_part"><h2>ПИЦЦА</h2></div>
 
 1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>
 <br>rfgr<br>rged<br>regrg
