--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -64,10 +64,10 @@
 
                 <div id="burger_mob_1" class="burger_mob">
                     <ul>
-                        <li><a href="#burger_part">Бургеры</a></li>
-                        <li><a href="#pizza_part">Пиццы</a></li>
-                        <li><a href="/">Нагитсы</a></li>
-                        <li><a href="/">Напитки</a></li>
+                        <li><a href="#burger_part" onclick="burgerClickClose();">Бургеры</a></li>
+                        <li><a href="#pizza_part" onclick="burgerClickClose();">Пиццы</a></li>
+                        <li><a href="/" onclick="burgerClickClose();">Нагитсы</a></li>
+                        <li><a href="/" onclick="burgerClickClose();">Напитки</a></li>
                     </ul>
                 </div>
 
@@ -100,23 +100,32 @@
             <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
         </div>
 
-        <div class="unit_ves">250 гр.</div>
-
+        <div class="unit_kind_bur">
+            250 г
+        </div>
         <div class="unit_capt">
             Супер бургероид
         </div>
         <div class="unit_hint">
             рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
         </div>
+        <div class="unit_price">
+            456 ₴
+        </div>
     </div>
     <div class="unit">
         <div class="unit_hit"></div>
         <div class="unit_img">
 
-        <img src="img/tile/chiken_burger.jpg">
+            <img src="img/tile/chiken_burger.jpg">
 
         </div>
-        <div class="unit_ves">250 гр.</div>
+        <div class="unit_kind">
+            <div>см</div>
+            <div class="unit_kind_pizza unit_kind_pizza_select">
+                30
+            </div>
+        </div>
 
         <div class="unit_capt">
             Супер бургероид 2
@@ -124,33 +133,156 @@
         <div class="unit_hint">
             рецепт бургера
         </div>
-
-
-    </div>
-       <div class="unit">
-
-    <div class="unit_img">
-
-        <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+        <div class="unit_price">
+            456 ₴
+        </div>
 
     </div>
-    <div class="unit_ves">250 гр.</div>
+    <div class="unit">
 
-    <div class="unit_capt">
-        Супер бургероид 2
+        <div class="unit_img">
+
+            <img src="img/tile/chiken_burger.jpg" height="180" width="280"/>
+
+        </div>
+        <div class="unit_kind">
+            <div>см</div>
+            <div class="unit_kind_pizza unit_kind_pizza_select">
+                25
+            </div>
+            <div class="unit_kind_pizza">
+                30
+            </div>
+        </div>
+
+        <div class="unit_capt">
+
+            Супер бургероид 2
+        </div>
+        <div class="unit_hint cl">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера,
+            рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
+        <div class="unit_price">
+            456 ₴
+        </div>
     </div>
-           <div class="unit_hint cl">
-               рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера,
-               рецепт бургера, рецепт бургера, рецепт бургера
-           </div>
-           <div class="unit_price">
-               456 ₴
-           </div>
 
-<div class="cl"></div>
+
+
+    <div class="unit">
+        <!--<div class="unit_hit"></div>-->
+        <div class="unit_img">
+            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+        </div>
+
+        <div class="unit_kind_bur">
+            250 г
+        </div>
+        <div class="unit_capt">
+            Супер бургероид
+        </div>
+        <div class="unit_hint">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
+        <div class="unit_price">
+            456 ₴
+        </div>
+    </div>
+
+
+
+    <div class="unit">
+        <!--<div class="unit_hit"></div>-->
+        <div class="unit_img">
+            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+        </div>
+
+        <div class="unit_kind_bur">
+            250 г
+        </div>
+        <div class="unit_capt">
+            Супер бургероид
+        </div>
+        <div class="unit_hint">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
+        <div class="unit_price">
+            456 ₴
+        </div>
+    </div>
+
+
+
+    <div class="unit">
+        <!--<div class="unit_hit"></div>-->
+        <div class="unit_img">
+            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+        </div>
+
+        <div class="unit_kind_bur">
+            250 г
+        </div>
+        <div class="unit_capt">
+            Супер бургероид
+        </div>
+        <div class="unit_hint">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
+        <div class="unit_price">
+            456 ₴
+        </div>
+    </div>
+
+
+    <div class="unit" data-id="777" data-price="yhjkl9">
+        <!--<div class="unit_hit"></div>-->
+        <div class="unit_img">
+            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+        </div>
+
+        <div class="unit_kind">
+            <span>см</span>
+            <div class="unit_kind_pizza unit_kind_pizza_select" onclick="selectUnit(this);" data-price="555">
+                25
+            </div>
+            <div class="unit_kind_pizza" onclick="selectUnit(this);" data-price="999">
+                30
+            </div>
+        </div>
+
+        <div class="unit_capt">
+            Супер бургероид
+        </div>
+        <div class="unit_hint">
+            рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
+        </div>
+        <div id="priseUnit777" class="unit_price">
+            456 ₴
+        </div>
+    </div>
+
 </div>
+<script type="text/javascript">
+    function selectUnit(el){
 
-</div>
+        //if(this.classList.contains('active'))
+
+        if (el.classList.contains("unit_kind_pizza_select")){}
+        else{
+            var papa=el.parentNode;
+            var arrDiv=papa.getElementsByTagName('div');
+
+            arrDiv[0].classList.remove("unit_kind_pizza_select");
+            arrDiv[1].classList.remove("unit_kind_pizza_select");
+            el.classList.add("unit_kind_pizza_select");
+            var id=papa.parentNode.dataset.id;
+
+        document.getElementById("priseUnit"+id).innerHTML=el.dataset.price+" ₴";
+        }
+
+    }
+</script>
 
 
 <div id="pizza_part"><h2>ПИЦЦА</h2></div>
