--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -257,7 +257,7 @@
         <div class="unit_hint">
             рецепт бургера, рецепт бургера, рецепт бургера, рецепт бургера
         </div>
-        <div id="priseUnit777" class="unit_price">
+        <div id="priceUnit777" class="unit_price">
             456 ₴
         </div>
     </div>
@@ -278,7 +278,7 @@
             el.classList.add("unit_kind_pizza_select");
             var id=papa.parentNode.dataset.id;
 
-        document.getElementById("priseUnit"+id).innerHTML=el.dataset.price+" ₴";
+        document.getElementById("priceUnit"+id).innerHTML=el.dataset.price+" ₴";
         }
 
     }
