--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -19,9 +19,12 @@
 
 
 </head>
+
+
+
 <body>
 
-
+<header>
 <div id="bh">
     <div class="maxw">
         <div id="bhlocation"><span class="location">  Мариуполь</span></div>
@@ -47,13 +50,13 @@
         <div class="cl"></div>
     </div>
 </div>
-
 <div id="headerback"></div>
 <div id="header">
     <div class="maxw rel">
         <div id="logo">
-            <img src="img/site/logo.png" alt="Логотип">
+            <a href="/"><img src="img/site/dbpic.php?i=logo&ep=1" alt="Логотип"></a>
         </div>
+        <nav>
         <div id="burgermenu" class="rel">
             <div id="burger_mob">
                 <div id="burger" class="burger">
@@ -85,12 +88,17 @@
 
             <div class="cl"></div>
         </div>
-
+        </nav>
 
         <div class="cl"></div>
     </div>
 </div>
 <div class="cl"></div>
+</header>
+
+
+
+
 
 <div id="burger_part"><h2>БУРГЕРЫ</h2></div>
 <div id="tile" class="dwfe maxw">
