Smoke Start 0.6.8 landing 1.0 win lng 0.1 burger 0.0.0.4

--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -54,7 +54,7 @@
 <div id="header">
     <div class="maxw rel">
         <div id="logo">
-            <a href="/"><img src="img/site/dbpic.php?i=logo&ep=1" alt="Логотип"></a>
+            <a href="/"><img src="img/site/dbpic.php?i=logo&ep=1" alt="Барин Бургер"></a>
         </div>
         <nav>
         <div id="burgermenu" class="rel">
