--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -100,7 +100,7 @@
 
 
 
-<div id="burger_part"><h2>БУРГЕРЫ</h2></div>
+<div id="burger-section"><h2>БУРГЕРЫ</h2></div>
 <div id="tile" class="dwfe maxw">
     <div class="unit">
         <!--<div class="unit_hit"></div>-->
@@ -293,7 +293,7 @@
 </script>
 
 
-<div id="pizza_part"><h2>ПИЦЦА</h2></div>
+<div id="pizza-section"><h2>ПИЦЦА</h2></div>
 
 1<br>2<br>3<br>4<br>5<br>6<br>7<br>8<br>9<br>10<br>11<br>12<br>13<br>14<br>15<br>
 <br>rfgr<br>rged<br>regrg
