Smoke Start 0.6.8 landing 1.0 win lng 0.1 burger 0.0.0.5

--- a/www.burger.my/index.html
+++ b/www.burger.my/index.html
@@ -101,11 +101,11 @@
 
 
 <div id="burger-section"><h2>БУРГЕРЫ</h2></div>
-<div id="tile" class="dwfe maxw">
+<div class="tile dwfe maxw">
     <div class="unit">
         <!--<div class="unit_hit"></div>-->
         <div class="unit_img">
-            <img src="img/tile/big_barin_burger.jpg" height="245" width="320"/>
+            <img src="img/tile/big_barin_burger.jpg">
         </div>
 
         <div class="unit_kind_bur">
@@ -121,6 +121,10 @@
             456 ₴
         </div>
     </div>
+
+
+
+
     <div class="unit">
         <div class="unit_hit"></div>
         <div class="unit_img">
